css/style.css
body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'GFS Didot', serif;
    background-color: white;
}

header img {
  width:40px;
  height:40px;
}
#navbar {
  min-height: 100px;
  background-color: white; /* Black background color */
  color: black;
  position: fixed; /* Make it stick/fixed */
  z-index: 1;
  top: -100px;  /*Hide the navbar 50 px outside of the top view */
  width: 100%; /* Full width */
  transition: top 0.3s; /* Transition effect when sliding down (and up) */
}

.navbar-nav {
  margin: auto;
  display: flex;
  align-items: center;
}

.navbar-nav .nav-item.active a {
  text-decoration: underline;
}

.nav-item.spacer {
  width: 25vw; /* Adjust the width as needed */
}

#shrinkImage {
  transition: transform 0.4s ease-out, opacity 0.4s ease-out;
}

#shrinkImage.shrink {
  transform: translateY(-100%) scale(0);
  opacity: 0;
}

hr {
  color: #333; /* Line color */
  background-color: #333; /* Line color for browsers that support it */
  height: 2px; /* Line thickness */
  margin: 20px 0; /* Margin above and below the line */
}

.top-content{
  background-color: white;
}

.headerimg{
    background-image: url(../img/tempCover.jpg);
    background-size: cover ;
    background-position: center 35%;
    height: 100vh;
    display: flex;
    align-items: center; /* Vertical centering */
    justify-content: center; /* Horizontal centering */
    color: aliceblue;
  }

  .headerimg h1 {
    font-size: 5vw;
    text-align: center;
    font-family: 'Averia Serif Libre', serif;
  }

  .headerimg h2 {
    font-family: 'Averia Serif Libre', serif;
    display: inline-block;
    border: 2px solid white;
  }

  .headerimg img {
    width: 50vw;
  }

  .intro-message {
    padding-top: 5vh;
    padding-bottom: 5vh;
  }

video,
  .blackjumbo {
    background-color: black;
    color: white;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
   display: block;
  }

  .two-columns {
    display: flex;
    justify-content: space-between;
}

.custom-img {
  height: 75vh;
  width: 100%; /* To make sure it fills the entire width of the column */
  object-fit: cover;
  object-position: center 15%
}

.review-slider{
  height: 65vh;
  width: 100%;
  background-color: black;
  color: white;
  display: flex;
  flex-direction: column; /* Stack items vertically */
  justify-content: center;
  position: relative;
}

.slider-content {
  margin-bottom: 20px; /* Adjust as needed to create space between content and controls */
}

.slider-controls {
  position: absolute;
  bottom: 10px; /* Adjust as needed to position controls from the bottom */
  left: 50%;
  transform: translateX(-50%);
}

/* Style for controls (adjust as needed) */
.slider-controls button {
  background-color: rgba(255, 255, 255, 0.5);
  color: black;
  padding: 10px;
  border: none;
  cursor: pointer;
}

.slider-title,
.slider-body {
  text-align: center; /* Center text within each element */
  max-width: 70%; /* Adjust the maximum width as needed */
  margin: 0 auto; /* Center elements within the container */
}

.slider-title {
  font-size: 2.5vw;
  font-weight: bold;
  margin-bottom: 10px;
  text-transform: uppercase;
}

.slider-body {
  font-size: 1.5vw;
  margin-bottom: 20px;
}

video {
  width: 100vw;
  height: 80vh;
  object-fit: cover;
  object-position: right top; 
}

.nav li i {
  font-size: 2vw; /* Change this value to your desired icon size */
  margin-right: 1vw; 
}

#footer-logo {
  width: 4vw;
}

#footer-id p {
  font-size: 1.5vw;
  text-align: start;
}

  /* Extra small devices (phones) */
@media (max-width: 576px) {
    /* Styles for phones */
    .headerimg {
        height: 70vh;

    }

    .headerimg h1 {
        font-size: 8vw;
      }

      .headerimg img {
        width: 70vw;
      }

      .blackjumbo h2{
          font-size: 5.5vw;
          padding-bottom: 2.5vh;

      }

      .blackjumbo h3{
        font-size: 4.5vw;

    }

      .blackjumbo p{
        font-size: 3vw;
        padding-bottom: 3vh;
    }

    .custom-img {
      height: 55vh;
      width: 100%; /* To make sure it fills the entire width of the column */
      object-fit: cover;
    }

    .review-slider{
      height: 40vh;
    }
    .slider-title {
      font-size: 4vw;
      font-weight: bold;
      margin-bottom: 10px;
      text-transform: uppercase;
    }
    
    .slider-body {
      font-size: 2.5vw;
      margin-bottom: 20px;
    }

    video {
      object-position: center top; 
      height: 60vh;
    }

    #footer-logo {
      width: 14vw;
      margin-bottom: 1vh;;
    }

    .nav li i {
      font-size: 5vw; /* Change this value to your desired icon size */
    }
    
    #footer-id p {
      font-size: 4vw;
      text-align: center;
    }
}

/* Small devices (tablets) */
@media (min-width: 577px) and (max-width: 767px) {
    /* Styles for tablets */
    .headerimg h1 {
        font-size: 7vw;
      }

      .review-slider{
        height: 55vh;
      }
      .slider-title {
        font-size: 3vw;
        font-weight: bold;
        margin-bottom: 10px;
        text-transform: uppercase;
      }
      
      .slider-body {
        font-size: 2vw;
        margin-bottom: 20px;
      }

      #footer-logo {
        width: 12vw;
        margin-bottom: 1vh;;
      }
  
      .nav li i {
        font-size: 4vw; /* Change this value to your desired icon size */
      }
      
      #footer-id p {
        font-size: 3vw;
        text-align: center;
      }
}

/* Medium devices (laptops, small desktops) */
@media (min-width: 768px) and (max-width: 991px) {
    /* Styles for laptops and small desktops */
    .headerimg h1 {
        font-size: 7vw;
      }

      .nav-item.spacer {
        width: 35vw; /* Adjust the width as needed */
      }

      #footer-logo {
        width: 8vw;
        margin-bottom: 1vh;;
      }
  
      .nav li i {
        font-size:2vw; /* Change this value to your desired icon size */
        margin-right: 0vw;
      }
      
      #footer-id p {
        font-size: 2.5vw;
        text-align: center;
      }
}

/* Large devices (desktops) */
@media (min-width: 992px) and (max-width: 1199px) {
    /* Styles for desktops */
    .headerimg h1 {
        font-size: 7vw;
      }

      .nav-item.spacer {
        width: 35vw; /* Adjust the width as needed */
      }
}

/* Extra large devices (large desktops) */
@media (min-width: 1200px) {
    /* Styles for large desktops */
}

